tests/baselines/reference/tsxErrorRecovery3.errors.txt
file1.tsx(3,1): error TS2657: JSX expressions must have one parent element.
file1.tsx(3,2): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file1.tsx(4,2): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file2.tsx(1,9): error TS2657: JSX expressions must have one parent element.
file2.tsx(1,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file2.tsx(1,21): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== file1.tsx (3 errors) ====
    declare namespace JSX { interface Element { } }
    
    <div></div>
    ~~~~~~~~~~~
     ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    <div></div>
    ~~~~~~~~~~~
!!! error TS2657: JSX expressions must have one parent element.
     ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    
==== file2.tsx (3 errors) ====
    var x = <div></div><div></div>
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2657: JSX expressions must have one parent element.
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
                        ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    